--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
-    "@unform/core": "^2.1.6",
-    "@unform/mobile": "^2.1.6",
+    "@unform/core": "2.1.0",
+    "@unform/mobile": "2.1.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
